# CLoFan

./: .gitignore  CLoFan.cbp  CLoFan.depend  CLoFan.layout  CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  main.cpp
Game/game/: game.cpp  game.h  map.cpp  map.h  player.cpp  player.h
Game/ui/: button.cpp  button.h  menu.cpp  menu.h  stopwatch.cpp  stopwatch.h
game/: background.cpp  background.h  door.cpp  door.h  entitie.cpp  entitie.h  entities.h  player.cpp  player.h  pnj.cpp  pnj.h  tilemap.cpp  tilemap.h
screens/: cScreen.cpp  cScreen.h  gameBeginningScreen.cpp  gameBeginningScreen.h  mainMenuScreen.cpp  mainMenuScreen.h  scene1Screen.cpp  scene1Screen.h  scene5Screen.cpp  screens.h
src/: main.cpp
src/game/: background.cpp  background.h  bed.cpp  bed.h  chair.cpp  chair.h  door.cpp  door.h  entitie.cpp  entitie.h  entities.h  key.cpp  key.h  library.cpp  library.h  money.cpp  money.h  player.cpp  player.h  pnj.h  table.cpp  table.h  timer.cpp  timer.h
src/screens/: baseScreen.cpp  baseScreen.h  cScreen.cpp  cScreen.h  gameBeginningScreen.cpp  gameBeginningScreen.h  gameOver.cpp  gameOver.h  mainMenuScreen.cpp  mainMenuScreen.h  scene1Screen.cpp  scene1Screen.h  scene2Screen.cpp  scene2Screen.h  scene3Screen.cpp  scene3Screen.h  scene4Screen.cpp  scene4Screen.h  scene5Screen.cpp  scene5Screen.h  screens.h
src/ui/: button.cpp  button.h  messageBox.cpp  messageBox.h
ui/: button.cpp  messageBox.cpp  messageBox.h
